--- a/asparagus/Views/Home/Eat.cshtml
+++ b/asparagus/Views/Home/Eat.cshtml
@@ -5,7 +5,7 @@
 
 <div>
     <button>Eat Asparagus</button>
-    <form asp-action="Eat" method="post">
+    <form asp-action="Feed" method="post">
 
     </form>
 </div>
