--- a/asparagus/Views/Home/Eat.cshtml
+++ b/asparagus/Views/Home/Eat.cshtml
@@ -4,8 +4,7 @@
 @model ApplicationUser
 
 <div>
-    <button>Eat Asparagus</button>
     <form asp-controller="Home" asp-action="Feed" method="post">
-
+        <input type="submit" value="Eat Asparagus">
     </form>
 </div>
