--- a/asparagus/Views/Home/Eat.cshtml
+++ b/asparagus/Views/Home/Eat.cshtml
@@ -4,7 +4,7 @@
 @model ApplicationUser
 
 <div>
-    <form asp-controller="Home" asp-action="Feed" method="post">
+    <form asp-controller="Home" asp-action="UserAte" method="post">
         <input type="submit" value="Eat Asparagus">
     </form>
 </div>
