--- a/asparagus/Views/Shared/_LoginPartial.cshtml
+++ b/asparagus/Views/Shared/_LoginPartial.cshtml
@@ -4,11 +4,11 @@
 
     <ul class="navbar-nav">
         @if (SignInManager.IsSignedIn(User)) {
-        <li class="nav-item">
-            <form class="form-inline" asp-route-returnUrl="@Url.Action("Eat", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Eat Asparagus</button>
-            </form>
-        </li>
+            <li class="nav-item">
+                <form class="form-inline" asp-controller="Home" asp-action="Eat">
+                    <button type="submit" class="nav-link btn btn-link text-dark">Eat Asparagus</button>
+                </form>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
