--- a/asparagus/Views/Shared/_Layout.cshtml
+++ b/asparagus/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,11 +10,18 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="nav-link text-dark" asp-controller="Home" asp-action="Feed">Feed</a>
+                <a class="nav-link text-dark" asp-controller="Home" asp-action="Users">Users</a>
+                @if (SignInManager.IsSignedIn(User)) {
+                    <form class="form-inline" asp-controller="Home" asp-action="Eat">
+                        <button type="submit" class="nav-link btn btn-link text-dark">Eat</button>
+                    </form>
+                }
 
                 <a id="aspTitle" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">asparagus</a>
 
