small view details

--- a/asparagus/Views/Home/Feed.cshtml
+++ b/asparagus/Views/Home/Feed.cshtml
@@ -5,7 +5,7 @@
                 <li>
                     @note.EatingDate
                     @note.Name
-                    ел спаржу уже @note.Counter раз
+                    покушал спаржу уже @note.Counter раз
                 </li>
             }
         }
