--- a/asparagus/Views/Home/Users.cshtml
+++ b/asparagus/Views/Home/Users.cshtml
@@ -4,7 +4,7 @@
             @foreach (var user in Model) {
                 <li>
                     @user.UserName.Substring(0, user.UserName.IndexOf('@'))
-                    ел спаржу уже @user.Counter раз
+                    ел спаржу @user.Counter раз
                 </li>
             }
         }
