--- a/asparagus/Views/Shared/_Layout.cshtml
+++ b/asparagus/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     </form>
                 }
 
-                <a id="aspTitle" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">asparagus</a>
+                <a id="aspTitle" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASPARAGUS</a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
