--- a/asparagus/Views/Home/Eat.cshtml
+++ b/asparagus/Views/Home/Eat.cshtml
@@ -1,10 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model ApplicationUser
+﻿@model ApplicationUser
 
 <div>
     <form asp-controller="Home" asp-action="UserAte" method="post">
-        <input type="submit" value="Eat Asparagus">
+        <input id="eatid" type="submit" value="Eat Asparagus">
     </form>
 </div>
