--- a/asparagus/Views/Shared/_Layout.cshtml
+++ b/asparagus/Views/Shared/_Layout.cshtml
@@ -25,10 +25,6 @@
 
                 <a id="aspTitle" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ASPARAGUS</a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                 </div>
@@ -43,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - asparagus - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - asparagus
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
