--- a/asparagus/Views/Home/Users.cshtml
+++ b/asparagus/Views/Home/Users.cshtml
@@ -1,5 +1,5 @@
-﻿<div class="users-block">
-    <ul>
+﻿<div class="users-block" >
+    <ul id="user-ul">
         @if (Model != null) {
             @foreach (var user in Model) {
                 <li>
